# autodl-helper

./: .dockerignore  .env.template  .gitignore  .importlinter  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  compose.yaml  config.example.yaml  config.test.yaml  docker-entrypoint.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config_help.md  feature_request.md
.github/workflows/: docker-image.yml  tests.yml
autodl_helper/: __init__.py  __main__.py  api.py  auth.py  auth_cache.py  auth_error_signals.py  auth_login.py  auth_policy.py  cli.py  cli_handlers.py  cli_parser.py  cli_renderers.py  config.py  events.py  interactive_actions.py  interactive_app.py  interactive_models.py  interactive_runtime.py  interactive_views.py  lock.py  models.py  notify.py  runtime_control.py  security.py  service_launchd.py  state.py  storage.py  tracemalloc_profiler.py
autodl_helper/api/: __init__.py  client.py
autodl_helper/auth/: __init__.py  cache.py  error_signals.py  login.py  policy.py
autodl_helper/cli/: __init__.py  __main__.py  _handlers_core.py  app.py  handlers.py  output.py  parser.py  shared.py  (+7 more)
docs/: ARCHITECTURE.md  COMMANDS.md  CONFIGURATION.md  DEVELOPMENT.md  DOCKER.md  OPEN_SOURCE_CHECKLIST.md  PRIVACY.md  SERVICE.md  TROUBLESHOOTING.md  architecture-slimming.md
images/: README.md
scripts/: __init__.py  build_nuitka_macos.sh  build_nuitka_windows.ps1  keeper_probe.py
tests/: conftest.py  test_cli_commands.py  test_cli_runtime.py  test_cli_smoke.py  test_config.py  test_interactive.py  test_interactive_runtime.py  test_keeper.py  test_keeper_probe.py  test_notify.py  test_scheduled_start.py  test_service_launchd.py  test_service_manager.py  test_state.py
(+154 files in other folders)
