[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autodl-helper"
version = "0.1.0"
description = "CLI daemon for AutoDL scheduled-start grabbing, keeper keepalive, and multi-account operations."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "ypp977" }
]
keywords = ["autodl", "cli", "daemon", "scheduler", "sqlite", "playwright"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]
dependencies = [
  "apscheduler==3.11.2",
  "playwright==1.58.0",
  "pydantic==2.12.5",
  "pytz==2025.2",
  "python-dotenv==1.2.2",
  "PyYAML==6.0.2",
  "requests==2.33.1",
  "urllib3==2.6.3",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "import-linter>=2.0",
  "ruff>=0.15.0",
  "Nuitka>=2.6",
]

[project.urls]
Homepage = "https://github.com/ypp977/autodl-helper"
Repository = "https://github.com/ypp977/autodl-helper"
Issues = "https://github.com/ypp977/autodl-helper/issues"

[project.scripts]
autodl-helper = "autodl_helper.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["autodl_helper*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
